--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,8 @@ body {
 }
 
 .card {
-    width: 300px;
+    width: 20%;
+    height: 60%;
     background-color: rgba(190, 189, 189, 0.993);
     display: flex;
     flex-direction: column;
